# Electrogram

./: .gitignore  LICENSE  MANIFEST.in  Makefile  Makerfile  README.md  build-docs.sh  hatch_build.py  pyproject.toml  remove.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: docs.yml  docs_gen.yml  error.yml  error_scrape.yml  force_pub.yml  format.yml  format_and_test.yml  publish.yml  python.yml  ruff.yml  rye.yml  style.yml  tag.yml  tag_and_publish.yml
.guthub/workflows/: rye.yml
compiler/api/: compiler.py
compiler/api/source/: auth_key.tl  main_api.tl  sys_msgs.tl
compiler/api/template/: combinator.txt  type.txt
compiler/docs/: compiler.py  strings.py  vao.py
compiler/docs/template/: bound-methods.rst  enums.rst  methods.rst  types.rst
compiler/errors/: compiler.py  sort.py
compiler/errors/source/: 400_BAD_REQUEST.tsv  403_FORBIDDEN.tsv  406_NOT_ACCEPTABLE.tsv  420_FLOOD.tsv  500_INTERNAL_SERVER_ERROR.tsv
compiler/errors/template/: class.txt  sub_class.txt
docs/source/: conf.py  index.rst  support.rst
docs/source/api/: client.rst  decorators.rst  handlers.rst
docs/source/faq/: code-hangs-when-calling-stop-restart-add-remove-handler.rst  how-to-use-webhooks.rst  index.rst  peer-id-invalid-error.rst  socket-send-oserror-timeouterror-connection-lost-reset.rst  the-account-has-been-limited-deactivated.rst  unicodeencodeerror-codec-cant-encode.rst
docs/source/intro/: install.rst  quickstart.rst
docs/source/start/: auth.rst  errors.rst  invoking.rst  setup.rst  updates.rst
docs/source/topics/: advanced-usage.rst  client-settings.rst  create-filters.rst  debugging.rst  more-on-updates.rst  mtproto-vs-botapi.rst  proxy.rst  scheduling.rst  serializing.rst  smart-plugins.rst  speedups.rst  storage-engines.rst  synchronous.rst  test-servers.rst  text-formatting.rst  use-filters.rst  voice-calls.rst
pyrogram/: __init__.py  client.py  dispatcher.py  emoji.py  file_id.py  filters.py  mime_types.py  sync.py  utils.py
pyrogram/connection/: __init__.py  connection.py
pyrogram/connection/transport/: __init__.py
pyrogram/crypto/: aes.py  mtproto.py  prime.py  rsa.py
pyrogram/enums/: __init__.py  accent_color.py  auto_name.py  business_schedule.py  chat_action.py  chat_event_action.py  chat_join_type.py  chat_member_status.py  chat_members_filter.py  chat_type.py  client_platform.py  folder_color.py  listerner_types.py  message_entity_type.py  message_media_type.py  message_service_type.py  messages_filter.py  next_code_type.py  parse_mode.py  poll_type.py  privacy_key.py  profile_color.py  reaction_type.py  reply_color.py  sent_code_type.py  stories_privacy_rules.py  story_privacy.py  user_status.py
pyrogram/errors/: __init__.py  rpc_error.py
pyrogram/handlers/: __init__.py  bot_business_connect_handler.py  bot_business_message_handler.py  callback_query_handler.py  chat_join_request_handler.py  chat_member_updated_handler.py  chosen_inline_result_handler.py  conversation_handler.py  deleted_bot_business_messages_handler.py  deleted_messages_handler.py  disconnect_handler.py  edited_bot_business_message_handler.py  edited_message_handler.py  handler.py  inline_query_handler.py  message_handler.py  message_reaction_count_updated_handler.py  message_reaction_updated_handler.py  poll_handler.py  pre_checkout_query_handler.py  raw_update_handler.py  shipping_query_handler.py  story_handler.py  user_status_handler.py
pyrogram/helpers/: __init__.py  helpers.py
pyrogram/methods/: __init__.py
pyrogram/methods/account/: __init__.py  get_account_ttl.py  get_privacy.py  set_account_ttl.py  set_privacy.py
pyrogram/methods/advanced/: __init__.py  invoke.py  resolve_peer.py  save_file.py
pyrogram/methods/auth/: __init__.py  accept_terms_of_service.py  check_password.py  connect.py  disconnect.py  get_active_sessions.py  get_password_hint.py  initialize.py  log_out.py  recover_password.py  resend_code.py  reset_session.py  reset_sessions.py  send_code.py  send_recovery_code.py  sign_in.py  sign_in_bot.py  sign_up.py  terminate.py
pyrogram/methods/bots/: __init__.py  answer_callback_query.py  answer_inline_query.py  answer_pre_checkout_query.py  answer_shipping_query.py  answer_web_app_query.py  delete_bot_commands.py  get_bot_commands.py  get_bot_default_privileges.py  get_bot_info.py  get_chat_menu_button.py  get_collectible_item_info.py  get_game_high_scores.py  get_inline_bot_results.py  refund_stars_payment.py  request_callback_answer.py  send_game.py  send_inline_bot_result.py  set_bot_commands.py  set_bot_default_privileges.py  set_bot_info.py  set_chat_menu_button.py  set_game_score.py
pyrogram/methods/business/: __init__.py  answer_shipping_query.py  create_invoice_link.py  get_business_connection.py  get_payment_form.py  get_stars_transactions.py  get_stars_transactions_by_id.py  send_invoice.py  send_payment_form.py
pyrogram/methods/chats/: __init__.py  add_chat_members.py  archive_chats.py  ban_chat_member.py  close_forum_topic.py  close_general_topic.py  create_channel.py  create_forum_topic.py  create_group.py  create_supergroup.py  delete_channel.py  delete_chat_photo.py  delete_folder.py  delete_forum_topic.py  delete_supergroup.py  delete_user_history.py  edit_forum_topic.py  edit_general_topic.py  export_folder_link.py  get_chat.py  get_chat_event_log.py  get_chat_member.py  get_chat_members.py  get_chat_members_count.py  get_chat_online_count.py  get_dialogs.py  get_dialogs_count.py  get_folders.py  get_forum_topics.py  get_forum_topics_by_id.py  get_nearby_chats.py  get_send_as_chats.py  hide_general_topic.py  join_chat.py  (+23 more)
pyrogram/nav/: __init__.py  pagination.py
pyrogram/parser/: __init__.py  html.py  markdown.py  parser.py  utils.py
pyrogram/raw/: __init__.py
pyrogram/session/: __init__.py  auth.py  session.py
pyrogram/storage/: __init__.py  dummy_client.py  file_storage.py  memory_storage.py  mongo_storage.py  sqlite_storage.py  storage.py
pyrogram/types/: __init__.py  list.py  object.py  update.py
tests/: test_file_id.py
tests/filters/: __init__.py  test_command.py
tests/parser/: test_html.py
(+429 files in other folders)
