[metadata]
name = pyrogram
version = 1.181.3
description = Nothing
long_description = file: README.md
long_description_content_type = text/markdown
author = 5hojib
author_email = yesiamshojib@gmail.com
url = https://github.com/5hojib/pyrogram
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8,<4.0
install_requires =
    aiosqlite
    pymediainfo==6.0.1
    pymongo==4.4.1
    pysocks
    tgcrypto
include_package_data = true
zip_safe = false

[options.extras_require]
dev =
    pytest

[options.package_data]
pyrogram = py.typed

[options.packages.find]
exclude =
    compiler*